--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -434,9 +434,11 @@
 							  <table class="table table-striped">
 								  <tbody id="tradeType_tbody_customer">
 								  <tr>
-									  <th width="12%">创建时间</th>
-									  <th width="12%">大客户社员数</th>
-									  <th width="12%">累计开卡数</th>
+									  <th width="8%">城市</th>
+									  <th width="10%">门店名称</th>
+									  <th width="10%">门店编号</th>
+									  <th width="12%">新增试用社员数</th>
+									  <th width="12%">累计试用社员总数</th>
 								  </tr>
 								  </tbody>
 							  </table>
