修改试用社员模块样式

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -185,7 +185,7 @@
                                         </div>
                                     </li>
                                     </div>
-                                    <div class="add_TestMember">
+                                    <div class="add_TestMember" style="cursor:pointer;">
                                         <li>
                                             <div class="col-sm-9" style="padding-right:0px;">试用社员：<span id="tryMemSum"></span><br>
                                                 <small>GMV：</small>
