修改社员分页

--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -1179,7 +1179,7 @@ function searchInfo_customer(cur_page){
 
                 if(!isCustomerCreatePage1){
                     $("#page_customer").createPage({
-                        pageCount:totalPage_city,
+                        pageCount:totalPage_customer,
                         current:cur_page,
                         backFn:function(p){
                             searchInfo_customer(p,begin_end_date);
