--- a/WebContent/data_access/observe_paramter_add.html
+++ b/WebContent/data_access/observe_paramter_add.html
@@ -192,7 +192,7 @@
 		var secondTr = $("#observebaseInfo tr").eq(1);
        var table =document.getElementById("observebaseInfo");
        var cellnumber = table.rows[1].cells.length;
-       
+
       
        var objectList = new Array();
        var observeScoreInfo = {
@@ -304,7 +304,7 @@
 			</td>
 			<td width="20%">
 				<p class="read">进店日期：<span style="color: red">*</span></p>
-				<p class="read"><input type="text"  maxlength="12" name="observe_date" id="observe_date"/></p>
+				<p class="read"><input type="text" readonly  maxlength="12" name="observe_date" id="observe_date"/></p>
 			</td>
 			<td width="20%">
 				<p class="read">扣分合计：</p>
