添加周报图表

--- a/WebContent/crm/big_member_view.html
+++ b/WebContent/crm/big_member_view.html
@@ -169,7 +169,7 @@
 					  <div class="clearfix search-criteria">
 						  <div id="selectorLine clearfix no-border" class="clearfix">
 							  <div class="form-group col-lg-4">
-								  <label>创建时间</label>
+								  <label>开卡时间</label>
 								  <div class="search-con">
 									  <div class="time" id="time_flag" style="width: 325px;z-index: 99999;margin:0 15px 0 0;">
 										  <div class="time_endbg" id="last_time_endbg">
