--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -269,8 +269,6 @@
             <div class="col-sm-12" id="main6" style="height: 350px;"></div>
             <div class="col-sm-12" id="maincard" style="height: 350px;"></div>
             <div class="col-sm-12" style="display:none">
-             <!--  <h4 style="margin-top: 0">门店分析</h4>
-              <p>全国已签约门店<span id="signedCount">?</span>家，处于筹备中的<b class="text-red" id="preStoreCount">?</b>家，已开业<b class="text-red" id="openCount">?</b>家，双证齐全数量占比<b class="text-red" id="doubleCardCount">?</b>%，仅有营业执照的<b class="text-red" id="businessCardCount">？</b>%，无证照<b class="text-red" id="noCardCount">?</b>%</p> -->
               <table class="table table-striped table-bordered" id="storecard">
                 <tr>
                   <th width="50">城市</th>
@@ -280,14 +278,6 @@
                   <th>无证照</th>
                   <th>双证持有率</th>
                 </tr>
-                <!-- <tr class="text-red">
-                  <th>合计</th>
-                  <th>285</th>
-                  <th>259</th>
-                  <th>19</th>
-                  <th>9</th>
-                  <th>90.90%</th>
-                </tr> -->
               </table>
             </div>
           </div>
@@ -313,10 +303,9 @@
             <div><span class="alert-warning">线上人员</span></div>
             <div class="col-sm-6" id="mainzongbu" style="height: 300px;"></div>
             <div class="col-sm-6" id="mainempzongbu" style="height: 300px;"></div>
-           <!--  <div><span class="alert-warning">线上人员（城市公司）</span></div>
-            <div class="col-sm-6" id="maingongsi" style="height: 300px;"></div>
-            <div class="col-sm-6" id="mainempgongsi" style="height: 300px;"></div> -->
-            <!-- <div id="main8" style="height: 350px;"></div> -->
+            <div><span class="alert-warning">线下人员动态及分布（含店长）</span></div>
+            <div class="col-sm-6" id="mainempbycity" style="height: 300px;"></div>
+            <div class="col-sm-6" id="mainempbystore" style="height: 300px;"></div>
             <div class="col-sm-12" style="display:none;">
               <table class="table table-bordered" id="weekcount">
               <tr>
@@ -345,66 +334,6 @@
                 <td>综合管理</td>
                 <td>门店总人数</td>
               </tr>
-              <!-- <tr>
-                <td>北京</td>
-                <td>130</td>
-                <td>-</td>
-                <td>2</td>
-                <td>-</td>
-                <td>94</td>
-                <td>154</td>
-                <td>1231</td>
-                <td>612</td>
-                <td class="text-red">2091</td>
-                <td>11</td>
-                <td>16</td>
-                <td>35</td>
-              </tr>
-              <tr>
-                <td>上海</td>
-                <td>52</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>37</td>
-                <td>27</td>
-                <td>440</td>
-                <td>251</td>
-                <td class="text-red">755</td>
-                <td>14.51</td>
-                <td>15</td>
-                <td>21</td>
-              </tr>
-              <tr>
-                <td>天津</td>
-                <td>40</td>
-                <td>0</td>
-                <td>1</td>
-                <td>0</td>
-                <td>40</td>
-                <td>1</td>
-                <td>547</td>
-                <td>283</td>
-                <td class="text-red">871</td>
-                <td>19</td>
-                <td>10</td>
-                <td>16</td>
-              </tr>
-              <tr class="text-red">
-                <th>合计</th>
-                <th>288</th>
-                <th>25</th>
-                <th>6</th>
-                <th>0</th>
-                <th>258</th>
-                <th>199</th>
-                <th>3048</th>
-                <th>1578</th>
-                <th>5083</th>
-                <th>18</th>
-                <th>119</th>
-                <th>92</th>
-              </tr> -->
             </table>
             </div>
           </div>
@@ -426,66 +355,6 @@
                   <th>划片片区数</th>
                   <th>划片国安侠数</th>
                 </tr>
-                <!-- <tr>
-                  <td bgcolor="#ff0">北京</td>
-                  <td>125</td>
-                  <td>1333</td>
-                  <td>1069</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">广州</td>
-                  <td>10</td>
-                  <td>110</td>
-                  <td>100</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">贵阳</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">昆明</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">上海</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">深圳</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">沈阳</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">天津</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr>
-                  <td bgcolor="#ff0">长沙</td>
-                  <td>24</td>
-                  <td>314</td>
-                  <td>163</td>
-                </tr>
-                <tr class="text-red">
-                  <th bgcolor="#ff0">合计</th>
-                  <th>295</th>
-                  <th>3366</th>
-                  <th>2512</th>
-                </tr> -->
               </table>
             </div>
           </div>
