--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -361,7 +361,7 @@
 					  <div class="clearfix search-criteria">
 						  <div id="selectorLine clearfix no-border" class="clearfix">
 							  <div class="form-group col-lg-4">
-								  <label>创建时间</label>
+								  <label>开卡时间</label>
 								  <div class="search-con">
 									  <div class="time" id="time_flag" style="width: 325px;z-index: 99999;margin:0 15px 0 0;">
 										  <div class="time_endbg" id="last_time_endbg">
@@ -437,8 +437,8 @@
 									  <th width="8%">城市</th>
 									  <th width="10%">门店名称</th>
 									  <th width="10%">门店编号</th>
-									  <th width="12%">新增试用社员数</th>
-									  <th width="12%">累计试用社员总数</th>
+									  <th width="12%">新增试用社员数（含过期）</th>
+									  <th width="12%">累计试用社员总数（有效期内）</th>
 								  </tr>
 								  </tbody>
 							  </table>
