修改人员统计sql

--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -565,6 +565,7 @@
             $("#tab_3").addClass("active");
             $("#tab_1_avtive").removeClass("active");
             $("#tab_1").removeClass("active");
+            $("#bigmember").hide();
 		}
 	    $(".logo-lg > ul > li").hover(function(){
 	      $(this).children(".nav_dropdown").toggle('1000');
